--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
+        <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     </head>
     <body>
         <div id="container"></div>
 
-        <script src="/static/bundle.js"></script>
+        <script src="static/bundle.js"></script>
     </body>
 </html>
